# NoahArc

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev,txt  requirements.txt
.github/workflows/: ci.yml  python-package.yml
configs/: data_config.yaml  model_config.yaml  pipeline.yaml
docs/: dataset_card.md  model_card.md
scripts/: run_inference.sh  run_preprocessing.sh  train_model.sh
src/: __init__.py
src/data/: download.py  preprocess.py  utils.py
src/evaluation/: calibration.py  metrics.py
src/explainability/: gradcam.py  shap_utils.py
src/export/: geotiff_writer.py  postprocess.py
src/models/: infer.py  train.py  unet.py
src/serve/: api.py
tests/: conftest.py  test__data.py  test__export.py  test__model.py  test_integration_sentinal.py  test_integration_sentinel.py
